# memory-mcp

./: .gitignore  Cargo.toml  Cross.toml  README.md  memory_tools.bat  package.json  version_tools.bat
.github/workflows/: release-npm.yml
src/: cli.rs  main.rs  mcp.rs
src/memory/: index.rs  mod.rs  model.rs  store.rs  time.rs
src/memory/store/: tests.rs
tools/: _oneshot.py  _paths.py  _run.py  memory_tools.py  npm-publish-retry.mjs  version_tools.py
