[package]
name = "memory"
version = "0.1.7"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
